--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
     <header>
         <nav class="navbar">
             <div class="logo-header">
-                <img src="/img/PatClinic.png" alt="Logo da Pata Clinic">
+              <a href="/"><img src="/img/PatClinic.png" alt="Logo da Pata Clinic"></a>
             </div>
     
             <ul class="nav-links">
@@ -69,24 +69,28 @@
             <h1>É sua primeira vez aqui?</h1>
             <h2>Chega mais</h2>
             <div class="container3-infos">
-                <div class="container-info-3">
-                    <div class="container-3-foto"></div>
-                    <h2>Já conheço e tenho cadastro <span>&#128521;</span></h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                     Consequuntur eveniet eligendi soluta libero qui. Cumque voluptas ipsa ducimus quod at.</p>
-                    <button>Agendar Serviço</button>
+              <div class="container-info-3">
+                <div class="container-3-foto"></div>
+                <h2>Já conheço e tenho cadastro <span>&#128521;</span></h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Consequuntur eveniet eligendi soluta libero qui. Cumque voluptas ipsa ducimus quod at.</p>
+                  <a href="/login"><button>Agendar Serviço</button></a>
                 </div>
-    
+                <section id="services">
+                
+                </section>
                 <div class="container-info-3 2">
-                    <div class="container-3-foto2"></div>
-                    <h2>É minha primeira vez por aqui! <span>&#129303;</span></h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui suscipit possimus odit consectetur animi optio nam enim soluta illum minima.</p>
-                    <a href="/cadastrar"><button>Crie sua conta aqui!</button></a>
+                  <div class="container-3-foto2"></div>
+                  <h2>É minha primeira vez por aqui! <span>&#129303;</span></h2>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui suscipit possimus odit consectetur animi optio nam enim soluta illum minima.</p>
+                  <a href="/cadastrar"><button>Crie sua conta aqui!</button></a>
                 </div>
             </div>
         </div>
         <div class="container4">
-          <h1>Conheça nossos Benefícios</h1>
+          <section id="benefits">
+            <h1>Conheça nossos Benefícios</h1>
+          </section>
           <div class="container-benefits">
             <div class="benefits-itens">
               <span>🐾</span>
@@ -129,7 +133,9 @@
         </div>
         
         <div class="faq-container">
-            <h2>FAQ - Perguntas Frequentes</h2>
+            <section id="faq">
+              <h2>FAQ - Perguntas Frequentes</h2>
+            </section>
           
             <div class="faq-item">
               <button class="faq-question">1. Quem pode participar do programa de castração gratuita?</button>
@@ -174,12 +180,16 @@
     <footer class="footer">
         <div class="footer-container">
           <div class="footer-about">
-            <h3>Pataclinic</h3>
+            <section id="about">
+              <h3>Pataclinic</h3>
+            </section>
             <p>Comprometidos com o bem-estar dos seus pets, oferecendo serviços gratuitos de castração e vacinação.</p>
           </div>
       
           <div class="footer-contact">
-            <h4>Contato</h4>
+            <section id="contact">
+              <h4>Contato</h4>
+            </section>
             <p><strong>Email:</strong> contato@pataclinic.com.br</p>
             <p><strong>Telefone:</strong> (11) 1234-5678</p>
             <p><strong>Endereço:</strong> Rua dos Pets, 123 - São Paulo, SP</p>
