--- a/views/p-09perfil.ejs
+++ b/views/p-09perfil.ejs
@@ -17,14 +17,13 @@
     <header>
         <nav class="navbar">
             <div class="logo-header">
-                <img src="/img/PatClinic.png" alt="Logo da Pata Clinic">
+                <a href="/"><img src="/img/PatClinic.png" alt="Logo da Pata Clinic"></a>
             </div>
     
             <ul class="nav-links">
                 <li><a href="/">Início</a></li>
                 <li><a href="#about">Quem Somos</a></li>
                 <li><a href="#contact">Contato</a></li>
-
             </ul>
     
             <div class="nav-actions">
@@ -35,8 +34,7 @@
             <button class="nav-toggle" aria-label="Abrir Menu">
                 <span class="hamburger"></span>
             </button>
-        </nav>
-                                                                        
+        </nav>                                                                        
     </header>
 
     <main>
@@ -245,6 +243,35 @@
         </section>
     </main>   
 
+    <footer class="footer">
+        <div class="footer-container">
+          <div class="footer-about">
+            <section id="about">
+              <h3>Pataclinic</h3>
+            </section>
+            <p>Comprometidos com o bem-estar dos seus pets, oferecendo serviços gratuitos de castração e vacinação.</p>
+          </div>
+      
+          <div class="footer-contact">
+            <section id="contact">
+              <h4>Contato</h4>
+            </section>
+            <p><strong>Email:</strong> contato@pataclinic.com.br</p>
+            <p><strong>Telefone:</strong> (11) 1234-5678</p>
+            <p><strong>Endereço:</strong> Rua dos Pets, 123 - São Paulo, SP</p>
+          </div>
+      
+          <div class="footer-social">
+            <h4>Siga-nos</h4>
+            <a href="https://www.facebook.com/" class="social-link" target="_blank">Facebook</a>
+            <a href="https://www.instagram.com/" class="social-link" target="_blank">Instagram</a>
+            <a href="https://www.whatsapp.com/" class="social-link" target="_blank">WhatsApp</a>
+          </div>
+        </div>
+        <div class="footer-bottom">
+          <p>&copy; 2024 Pataclinic. Todos os direitos reservados.</p>
+        </div>
+    </footer>
 
     <script src="/js/index.js"></script>
 </body>
